<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundorange2"
    android:orientation="horizontal"

    android:padding="10dp"
    tools:context=".UnregisteredUserInfo">

    <EditText
        android:id="@+id/idNumberUnregistered"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_text_round"
        android:digits="0123456789"
        android:drawableStart="@drawable/ic_baseline_create"
        android:drawableLeft="@drawable/ic_baseline_create"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/national_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="11"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#8A8787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/inputNameUnregistered"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_text_round"
        android:drawableStart="@drawable/ic_baseline_create"
        android:drawableLeft="@drawable/ic_baseline_create"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="25"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#8A8787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNumberUnregistered" />

    <EditText
        android:id="@+id/inputSurnameUnregistered"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_text_round"
        android:drawableStart="@drawable/ic_baseline_create"
        android:drawableLeft="@drawable/ic_baseline_create"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="text"
        android:maxLength="25"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#8A8787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNameUnregistered" />

    <EditText
        android:id="@+id/inputPhoneNoUnregistered"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_text_round"
        android:digits="0123456789"
        android:drawableStart="@drawable/ic_baseline_create"
        android:drawableLeft="@drawable/ic_baseline_create"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Phone Number (5xx-xxx-xx-xx)"
        android:inputType="text"
        android:maxLength="13"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSurnameUnregistered" />

    <EditText
        android:id="@+id/inputEmailUnregistered"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_text_round"
        android:drawableStart="@drawable/ic_baseline_create"
        android:drawableLeft="@drawable/ic_baseline_create"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="text|textEmailAddress"
        android:maxLength="50"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNoUnregistered" />

    <Button
        android:id="@+id/buttonSignUpUnregistered"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_button_round"
        android:onClick="onClickSaveUnregistered"
        android:text="SAVE"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailUnregistered" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="In Order to Make a Reservation You Need to Enter Your Personal Information."
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>