<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundorange2"
    android:orientation="horizontal"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-41dp"
        tools:layout_editor_absoluteY="-167dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/todo"
                android:onClick="backbutton1"
                app:srcCompat="@drawable/ic_baseline_arrow_back" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/ic_baseline_person" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="SIGN UP FOR"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"

                android:layout_marginRight="32dp"
                android:text="TRAVELLER'S Club Privileges"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/national_id"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="#8A8787" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="#8A8787" />

            <EditText
                android:id="@+id/inputSurname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="#8A8787" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.236">

                <RadioButton
                    android:id="@+id/MaleRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_segmented_left"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Male"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/FemaleRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_segmented_right"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Female"
                    android:textColor="@color/black" />
            </RadioGroup>

            <EditText
                android:id="@+id/inputPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:digits="0123456789+"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Phone Number (5xx-xxx-xx-xx)"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/inputDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Birthday (mm/dd/yyyy)"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="text|textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_text_round"
                android:drawableStart="@drawable/ic_baseline_create"
                android:drawableLeft="@drawable/ic_baseline_create"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="New Password - At least 6 characters"
                android:inputType="text|textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <CheckBox
                android:id="@+id/inputTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="I have read and accept the Terms and Conditions"
                android:textColor="@color/colorPrimary"
                android:textColorLink="#FFFFFF" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="140dp"
                android:layout_marginRight="140dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/ic_button_round"
                android:onClick="onClickSignup"
                android:text="SIGN UP"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>